--- a/src/app/components/parts/main-mappings-available-attributes/main-mappings-available-attributes.component.html
+++ b/src/app/components/parts/main-mappings-available-attributes/main-mappings-available-attributes.component.html
@@ -24,7 +24,7 @@
               </button>
               <div aria-labelledby="cDetailsGroup" class="dropdown-menu">
                 <a *ngFor="let cDetail of attribute.mapPointerC; let i = index;"
-                   [routerLink]="['', { outlets: {primary: ['mappings', dataService.selectedNetwork.id, attribute.mapPointerC[i]]} }]"
+                   [routerLink]="['', { outlets: {primary: ['mappings', attribute.mapPointerC[i], attribute.name]} }]"
                    class="dropdown-item">
                   <span *ngIf="typeHint.ec then ecBlock else ncBlock"></span>
                   <ng-template
@@ -40,7 +40,7 @@
           <!-- exactly one mapping exists -->
           <span *ngIf="attribute.mapPointerC.length === 1">
                   <button *ngIf="attribute.mapPointerC.length > 0"
-                          [routerLink]="['', { outlets: {primary: ['mappings', dataService.selectedNetwork.id, attribute.mapPointerC[0]]} }]"
+                          [routerLink]="['', { outlets: {primary: ['mappings', attribute.mapPointerC[0], attribute.name]} }]"
                           class="btn btn-outline-secondary"
                           data-toggle="tooltip"
                           ngbTooltip="{{'MAIN_MAPPINGS_TT_MAP_DETAILS' | translate}}" placement="bottom"
@@ -70,7 +70,7 @@
                 </button>
                 <div aria-labelledby="dDetailsGroup" class="dropdown-menu">
                   <a *ngFor="let dDetail of attribute.mapPointerD; let i = index;"
-                     [routerLink]="['', { outlets: {primary: ['mappings', dataService.selectedNetwork.id, attribute.mapPointerD[i]]} }]"
+                     [routerLink]="['', { outlets: {primary: ['mappings', attribute.mapPointerD[i], attribute.name]} }]"
                      class="dropdown-item">
                     <span *ngIf="typeHint.ed then edBlock else ndBlock"></span>
                     <ng-template #edBlock>
@@ -87,7 +87,7 @@
 
           <span *ngIf="attribute.mapPointerD.length === 1">
             <button *ngIf="attribute.mapPointerD.length > 0"
-                    [routerLink]="['', { outlets: {primary: ['mappings', dataService.selectedNetwork.id, attribute.mapPointerD[0]]} }]"
+                    [routerLink]="['', { outlets: {primary: ['mappings', attribute.mapPointerD[0], attribute.name]} }]"
                     class="btn btn-outline-secondary"
                     data-toggle="tooltip"
                     ngbTooltip="{{'MAIN_MAPPINGS_TT_MAP_DETAILS' | translate}}" placement="bottom"
