--- a/src/app/components/sidebar-edit/sidebar-edit.component.html
+++ b/src/app/components/sidebar-edit/sidebar-edit.component.html
@@ -137,7 +137,7 @@
 
           <td>
             <a
-              [routerLink]="['', { outlets: {primary: ['mappings', 'nd' + colIndex, nodeCol]} }]"
+              [routerLink]="['', { outlets: {primary: ['mappings', 'nd', nodeCol]} }]"
               role="button">
               <b>{{nodeCol}}</b>
             </a>
@@ -213,7 +213,7 @@
 
           <td>
             <a
-              [routerLink]="['', { outlets: {primary: ['mappings', 'ed' + colIndex, edgeCol]} }]"
+              [routerLink]="['', { outlets: {primary: ['mappings', 'ed', edgeCol]} }]"
               role="button">
               <b>{{edgeCol}}</b>
             </a>
