--- a/src/app/components/parts/main-mappings-available-attributes/main-mappings-available-attributes.component.html
+++ b/src/app/components/parts/main-mappings-available-attributes/main-mappings-available-attributes.component.html
@@ -15,6 +15,7 @@
         <ng-template #continuousBlock>
 
           <!-- more than one mapping exists -->
+          <!-- todo needs debugging, bc does not work properly -->
           <span *ngIf="attribute.mapPointerC.length > 1">
           <div class="btn-group" role="group">
             <div class="btn-group" role="group">
